[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://refresh32.png" type="Texture" id=2]
[ext_resource path="res://control_btn.gd" type="Script" id=3]

[sub_resource type="ImageTexture" id=1]

[node name="ControlBtn" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ReloadButton" type="Button" parent="."]
margin_left = 110.751
margin_top = 0.338821
margin_right = 154.751
margin_bottom = 38.3388
icon = ExtResource( 2 )

[node name="BarIndex" type="SpinBox" parent="."]
margin_left = -0.363663
margin_top = 0.727325
margin_right = 109.636
margin_bottom = 38.7273
custom_icons/updown = SubResource( 1 )
max_value = 10000.0
align = 1

[node name="Panel" type="Panel" parent="."]
margin_left = 5.96046e-08
margin_top = 41.8213
margin_right = 40.0
margin_bottom = 81.8213
rect_scale = Vector2( 2.73875, 0.937391 )

[node name="CurrBarIndex" type="RichTextLabel" parent="."]
margin_left = 2.54564
margin_top = 50.9129
margin_right = 102.546
margin_bottom = 90.9129
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "let's go!"

[connection signal="pressed" from="ReloadButton" to="." method="_on_ReloadButton_pressed"]
[connection signal="value_changed" from="BarIndex" to="." method="_on_BarIndex_value_changed"]
